--- a/Debut/Debut.vcxproj
+++ b/Debut/Debut.vcxproj
@@ -140,6 +140,7 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\Debut\Renderer\Shader.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
     <ClInclude Include="src\Debut.h" />
     <ClInclude Include="src\Debut\Application.h" />
@@ -160,9 +161,10 @@
     <ClInclude Include="src\Debut\dbtpch.h" />
     <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h" />
-    <ClInclude Include="src\Renderer\GraphicsContext.h" />
+    <ClInclude Include="src\Debut\Renderer\GraphicsContext.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Debut\Renderer\Shader.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
     <ClCompile Include="src\Debut\Application.cpp" />
     <ClCompile Include="src\Debut\ImGui\ImGuiBuild.cpp" />
