--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,9 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1356,667
-ViewportId=0xE927CF2F
-Size=757,480
+Pos=0,19
+Size=272,701
 Collapsed=0
 
 [Window][Horizontal contents size demo window]
@@ -21,7 +20,7 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][DockSpace Demo]
-Size=1920,991
+Size=1280,720
 Collapsed=0
 
 [Window][Example: Console]
@@ -36,7 +35,7 @@ Size=275,48
 Collapsed=0
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Pos=0,48 Size=1920,972 Split=X Selected=0xE927CF2F
+DockSpace     ID=0x3BC79352 Pos=140,224 Size=1280,701 Split=X Selected=0xE927CF2F
   DockNode    ID=0x00000005 Parent=0x3BC79352 SizeRef=1418,972 Split=Y
     DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=1920,670 CentralNode=1
     DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=1920,300 Selected=0x46B5E99C
