--- a/Debut/Debut.vcxproj
+++ b/Debut/Debut.vcxproj
@@ -140,6 +140,7 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\Debut\Core\Time.h" />
     <ClInclude Include="src\Debut\Renderer\OrthographicCamera.h" />
     <ClInclude Include="src\Debut\Renderer\RenderCommand.h" />
     <ClInclude Include="src\Debut\Renderer\RendererAPI.h" />
