--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,7 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,19
+ViewportPos=1584,244
+ViewportId=0xE927CF2F
 Size=272,701
 Collapsed=0
 
