--- a/Debut/Debut.vcxproj.filters
+++ b/Debut/Debut.vcxproj.filters
@@ -86,6 +86,7 @@
     <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
     <ClInclude Include="src\Debut\Renderer\OrthographicCamera.h" />
     <ClInclude Include="src\Debut\Core\Time.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLShader.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Debut\Application.cpp">
@@ -126,5 +127,6 @@
     <ClCompile Include="src\Debut\Renderer\RenderCommand.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
     <ClCompile Include="src\Debut\Renderer\OrthographicCamera.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLShader.cpp" />
   </ItemGroup>
 </Project>
