--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -35,6 +35,11 @@ Pos=967,369
 Size=275,48
 Collapsed=0
 
+[Window][Settings]
+Pos=60,60
+Size=432,81
+Collapsed=0
+
 [Docking][Data]
 DockSpace     ID=0x3BC79352 Pos=140,224 Size=1280,701 Split=X Selected=0xE927CF2F
   DockNode    ID=0x00000005 Parent=0x3BC79352 SizeRef=1418,972 Split=Y
