--- a/Debut/Debut.vcxproj
+++ b/Debut/Debut.vcxproj
@@ -220,6 +220,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="assets\shaders\texture.glsl" />
+    <None Include="assets\shaders\unlit.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
