--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,9 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1584,244
+ViewportPos=1448,215
 ViewportId=0xE927CF2F
-Size=272,701
+Size=409,701
 Collapsed=0
 
 [Window][Horizontal contents size demo window]
@@ -21,6 +21,7 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][DockSpace Demo]
+Pos=0,0
 Size=1280,720
 Collapsed=0
 
@@ -36,12 +37,13 @@ Size=275,48
 Collapsed=0
 
 [Window][Settings]
-Pos=60,60
+ViewportPos=1111,400
+ViewportId=0x1C33C293
 Size=432,81
 Collapsed=0
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Pos=140,224 Size=1280,701 Split=X Selected=0xE927CF2F
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=201,249 Size=1280,701 Split=X Selected=0xE927CF2F
   DockNode    ID=0x00000005 Parent=0x3BC79352 SizeRef=1418,972 Split=Y
     DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=1920,670 CentralNode=1
     DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=1920,300 Selected=0x46B5E99C
