--- a/Debut/Debut.vcxproj.filters
+++ b/Debut/Debut.vcxproj.filters
@@ -39,17 +39,38 @@
     <ClInclude Include="src\Debut.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="src\Debut\Application.h">
-      <Filter>src\Debut</Filter>
+    <ClInclude Include="src\Debut\Core\Application.h">
+      <Filter>src\Debut\Core</Filter>
     </ClInclude>
-    <ClInclude Include="src\Debut\Core.h">
-      <Filter>src\Debut</Filter>
+    <ClInclude Include="src\Debut\Core\Core.h">
+      <Filter>src\Debut\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Debut\Core\EntryPoint.h">
+      <Filter>src\Debut\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Debut\Core\Input.h">
+      <Filter>src\Debut\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Debut\Core\KeyCodes.h">
+      <Filter>src\Debut\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Debut\Core\Layer.h">
+      <Filter>src\Debut\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Debut\Core\LayerStack.h">
+      <Filter>src\Debut\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Debut\Core\Log.h">
+      <Filter>src\Debut\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Debut\Core\MouseButtonCodes.h">
+      <Filter>src\Debut\Core</Filter>
     </ClInclude>
     <ClInclude Include="src\Debut\Core\Time.h">
       <Filter>src\Debut\Core</Filter>
     </ClInclude>
-    <ClInclude Include="src\Debut\EntryPoint.h">
-      <Filter>src\Debut</Filter>
+    <ClInclude Include="src\Debut\Core\Window.h">
+      <Filter>src\Debut\Core</Filter>
     </ClInclude>
     <ClInclude Include="src\Debut\Events\ApplicationEvent.h">
       <Filter>src\Debut\Events</Filter>
@@ -66,22 +87,7 @@
     <ClInclude Include="src\Debut\ImGui\ImGuiLayer.h">
       <Filter>src\Debut\ImGui</Filter>
     </ClInclude>
-    <ClInclude Include="src\Debut\Input.h">
-      <Filter>src\Debut</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Debut\KeyCodes.h">
-      <Filter>src\Debut</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Debut\Layer.h">
-      <Filter>src\Debut</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Debut\LayerStack.h">
-      <Filter>src\Debut</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Debut\Log.h">
-      <Filter>src\Debut</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Debut\MouseButtonCodes.h">
+    <ClInclude Include="src\Debut\OrthographicCameraController.h">
       <Filter>src\Debut</Filter>
     </ClInclude>
     <ClInclude Include="src\Debut\Renderer\Buffer.h">
@@ -110,9 +116,6 @@
     </ClInclude>
     <ClInclude Include="src\Debut\Renderer\VertexArray.h">
       <Filter>src\Debut\Renderer</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Debut\Window.h">
-      <Filter>src\Debut</Filter>
     </ClInclude>
     <ClInclude Include="src\Debut\dbtpch.h">
       <Filter>src\Debut</Filter>
@@ -144,11 +147,19 @@
     <ClInclude Include="vendor\stb_image\stb_image.h">
       <Filter>vendor\stb_image</Filter>
     </ClInclude>
-    <ClInclude Include="src\Debut\OrthographicCameraController.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Debut\Application.cpp">
-      <Filter>src\Debut</Filter>
+    <ClCompile Include="src\Debut\Core\Application.cpp">
+      <Filter>src\Debut\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Debut\Core\Layer.cpp">
+      <Filter>src\Debut\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Debut\Core\LayerStack.cpp">
+      <Filter>src\Debut\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Debut\Core\Log.cpp">
+      <Filter>src\Debut\Core</Filter>
     </ClCompile>
     <ClCompile Include="src\Debut\ImGui\ImGuiBuild.cpp">
       <Filter>src\Debut\ImGui</Filter>
@@ -156,13 +167,7 @@
     <ClCompile Include="src\Debut\ImGui\ImGuiLayer.cpp">
       <Filter>src\Debut\ImGui</Filter>
     </ClCompile>
-    <ClCompile Include="src\Debut\Layer.cpp">
-      <Filter>src\Debut</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Debut\LayerStack.cpp">
-      <Filter>src\Debut</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Debut\Log.cpp">
+    <ClCompile Include="src\Debut\OrthographicCameraController.cpp">
       <Filter>src\Debut</Filter>
     </ClCompile>
     <ClCompile Include="src\Debut\Renderer\Buffer.cpp">
@@ -219,10 +224,5 @@
     <ClCompile Include="vendor\stb_image\stb_image.cpp">
       <Filter>vendor\stb_image</Filter>
     </ClCompile>
-    <ClCompile Include="src\Debut\OrthographicCameraController.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="assets\shaders\texture.glsl" />
-    <None Include="assets\shaders\unlit.glsl" />
   </ItemGroup>
 </Project>
