Added profiling and quad textures

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -36,8 +36,7 @@ Size=275,48
 Collapsed=0
 
 [Window][Settings]
-ViewportPos=1031,390
-ViewportId=0x1C33C293
+Pos=669,137
 Size=432,159
 Collapsed=0
 
