--- a/Debut/Debut.vcxproj.filters
+++ b/Debut/Debut.vcxproj.filters
@@ -105,6 +105,9 @@
     <ClInclude Include="src\Debut\Renderer\Renderer.h">
       <Filter>src\Debut\Renderer</Filter>
     </ClInclude>
+    <ClInclude Include="src\Debut\Renderer\Renderer2D.h">
+      <Filter>src\Debut\Renderer</Filter>
+    </ClInclude>
     <ClInclude Include="src\Debut\Renderer\RendererAPI.h">
       <Filter>src\Debut\Renderer</Filter>
     </ClInclude>
@@ -147,7 +150,6 @@
     <ClInclude Include="vendor\stb_image\stb_image.h">
       <Filter>vendor\stb_image</Filter>
     </ClInclude>
-    <ClInclude Include="src\Debut\Renderer\Renderer2D.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Debut\Core\Application.cpp">
@@ -181,6 +183,9 @@
       <Filter>src\Debut\Renderer</Filter>
     </ClCompile>
     <ClCompile Include="src\Debut\Renderer\Renderer.cpp">
+      <Filter>src\Debut\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Debut\Renderer\Renderer2D.cpp">
       <Filter>src\Debut\Renderer</Filter>
     </ClCompile>
     <ClCompile Include="src\Debut\Renderer\RendererAPI.cpp">
@@ -225,6 +230,5 @@
     <ClCompile Include="vendor\stb_image\stb_image.cpp">
       <Filter>vendor\stb_image</Filter>
     </ClCompile>
-    <ClCompile Include="src\Debut\Renderer\Renderer2D.cpp" />
   </ItemGroup>
 </Project>
