Added OpenGLError and quad rotation
OpenGLError lets me wrap OpenGL calls in an error checker so that if something goes wrong, I get notfied (only works in debug mode)

--- a/.gitignore
+++ b/.gitignore
@@ -234,3 +234,8 @@ _Pvt_Extensions
 
 # FAKE - F# Make
 .fake/
+
+# Profiling logs
+Sandbox/DebutProfile-Runtime.json
+Sandbox/DebutProfile-Shutdown.json
+Sandbox/DebutProfile-Startup.json
