--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -36,7 +36,8 @@ Size=275,48
 Collapsed=0
 
 [Window][Settings]
-Pos=669,137
+ViewportPos=1546,239
+ViewportId=0x1C33C293
 Size=432,159
 Collapsed=0
 
