--- a/Debut/Debut.vcxproj.filters
+++ b/Debut/Debut.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="src\Debut\Core\Input.h">
       <Filter>src\Debut\Core</Filter>
     </ClInclude>
+    <ClInclude Include="src\Debut\Core\Instrumentor.h">
+      <Filter>src\Debut\Core</Filter>
+    </ClInclude>
     <ClInclude Include="src\Debut\Core\KeyCodes.h">
       <Filter>src\Debut\Core</Filter>
     </ClInclude>
@@ -129,6 +132,9 @@
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h">
       <Filter>src\Platform\OpenGL</Filter>
     </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLError.h">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClInclude>
     <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h">
       <Filter>src\Platform\OpenGL</Filter>
     </ClInclude>
@@ -150,8 +156,6 @@
     <ClInclude Include="vendor\stb_image\stb_image.h">
       <Filter>vendor\stb_image</Filter>
     </ClInclude>
-    <ClInclude Include="src\Debut\Core\Instrumentor.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLError.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Debut\Core\Application.cpp">
