--- a/Sandbox/Sandbox.vcxproj.filters
+++ b/Sandbox/Sandbox.vcxproj.filters
@@ -15,6 +15,9 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\ParticleSystem.h">
+      <Filter>src</Filter>
+    </ClInclude>
     <ClInclude Include="src\Sandbox2D.h">
       <Filter>src</Filter>
     </ClInclude>
@@ -22,6 +25,9 @@
   <ItemGroup>
     <ClCompile Include="..\Debut\vendor\loguru\loguru.cpp">
       <Filter>Debut\vendor\loguru</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ParticleSystem.cpp">
+      <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="src\Sandbox2D.cpp">
       <Filter>src</Filter>
