--- a/Debut/Debut.vcxproj.filters
+++ b/Debut/Debut.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClInclude Include="src\Debut\Renderer\Buffer.h">
       <Filter>src\Debut\Renderer</Filter>
     </ClInclude>
+    <ClInclude Include="src\Debut\Renderer\FrameBuffer.h">
+      <Filter>src\Debut\Renderer</Filter>
+    </ClInclude>
     <ClInclude Include="src\Debut\Renderer\GraphicsContext.h">
       <Filter>src\Debut\Renderer</Filter>
     </ClInclude>
@@ -117,6 +120,9 @@
     <ClInclude Include="src\Debut\Renderer\Shader.h">
       <Filter>src\Debut\Renderer</Filter>
     </ClInclude>
+    <ClInclude Include="src\Debut\Renderer\SubTexture2D.h">
+      <Filter>src\Debut\Renderer</Filter>
+    </ClInclude>
     <ClInclude Include="src\Debut\Renderer\Texture.h">
       <Filter>src\Debut\Renderer</Filter>
     </ClInclude>
@@ -133,6 +139,9 @@
       <Filter>src\Platform\OpenGL</Filter>
     </ClInclude>
     <ClInclude Include="src\Platform\OpenGL\OpenGLError.h">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLFrameBuffer.h">
       <Filter>src\Platform\OpenGL</Filter>
     </ClInclude>
     <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h">
@@ -156,9 +165,6 @@
     <ClInclude Include="vendor\stb_image\stb_image.h">
       <Filter>vendor\stb_image</Filter>
     </ClInclude>
-    <ClInclude Include="src\Debut\Renderer\SubTexture2D.h" />
-    <ClInclude Include="src\Debut\Renderer\FrameBuffer.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLFrameBuffer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Debut\Core\Application.cpp">
@@ -185,6 +191,9 @@
     <ClCompile Include="src\Debut\Renderer\Buffer.cpp">
       <Filter>src\Debut\Renderer</Filter>
     </ClCompile>
+    <ClCompile Include="src\Debut\Renderer\FrameBuffer.cpp">
+      <Filter>src\Debut\Renderer</Filter>
+    </ClCompile>
     <ClCompile Include="src\Debut\Renderer\OrthographicCamera.cpp">
       <Filter>src\Debut\Renderer</Filter>
     </ClCompile>
@@ -203,6 +212,9 @@
     <ClCompile Include="src\Debut\Renderer\Shader.cpp">
       <Filter>src\Debut\Renderer</Filter>
     </ClCompile>
+    <ClCompile Include="src\Debut\Renderer\SubTexture2D.cpp">
+      <Filter>src\Debut\Renderer</Filter>
+    </ClCompile>
     <ClCompile Include="src\Debut\Renderer\Texture.cpp">
       <Filter>src\Debut\Renderer</Filter>
     </ClCompile>
@@ -216,6 +228,9 @@
       <Filter>src\Platform\OpenGL</Filter>
     </ClCompile>
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLFrameBuffer.cpp">
       <Filter>src\Platform\OpenGL</Filter>
     </ClCompile>
     <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp">
@@ -239,8 +254,5 @@
     <ClCompile Include="vendor\stb_image\stb_image.cpp">
       <Filter>vendor\stb_image</Filter>
     </ClCompile>
-    <ClCompile Include="src\Debut\Renderer\SubTexture2D.cpp" />
-    <ClCompile Include="src\Debut\Renderer\FrameBuffer.cpp" />
-    <ClCompile Include="src\Platform\OpenGL\OpenGLFrameBuffer.cpp" />
   </ItemGroup>
 </Project>
