--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Debut/vendor/glm"]
 	path = Debut/vendor/glm
 	url = https://github.com/Groovounet/glm
+[submodule "Debut/vendor/spdlog"]
+	path = Debut/vendor/spdlog
+	url = https://github.com/gabime/spdlog
