--- a/Debutant/imgui.ini
+++ b/Debutant/imgui.ini
@@ -4,9 +4,18 @@ Size=400,400
 Collapsed=0
 
 [Window][Settings]
-Pos=60,60
-Size=152,54
+Pos=0,19
+Size=375,972
+Collapsed=0
+DockId=0x00000001,0
+
+[Window][DockSpace Demo]
+Pos=0,0
+Size=1920,991
 Collapsed=0
 
 [Docking][Data]
+DockSpace   ID=0x3BC79352 Window=0x4647B76E Pos=0,48 Size=1920,972 Split=X
+  DockNode  ID=0x00000001 Parent=0x3BC79352 SizeRef=375,701 Selected=0x1C33C293
+  DockNode  ID=0x00000002 Parent=0x3BC79352 SizeRef=1543,701 CentralNode=1
 
