--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -21,7 +21,6 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][DockSpace Demo]
-Pos=0,0
 Size=1280,720
 Collapsed=0
 
@@ -40,14 +39,11 @@ Collapsed=0
 Pos=0,19
 Size=385,701
 Collapsed=0
-DockId=0x00000002,0
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=233,281 Size=1280,701 Split=X Selected=0xE927CF2F
-  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=385,701 Selected=0x1C33C293
-  DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=893,701 Split=X
-    DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=1418,972 Split=Y
-      DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=1920,670 CentralNode=1
-      DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=1920,300 Selected=0x46B5E99C
-    DockNode    ID=0x00000006 Parent=0x00000007 SizeRef=500,972 Selected=0xBF126D42
+DockSpace     ID=0x3BC79352 Pos=233,281 Size=1280,701 Split=X Selected=0xE927CF2F
+  DockNode    ID=0x00000005 Parent=0x3BC79352 SizeRef=1418,972 Split=Y
+    DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=1920,670 CentralNode=1
+    DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=1920,300 Selected=0x46B5E99C
+  DockNode    ID=0x00000006 Parent=0x3BC79352 SizeRef=500,972 Selected=0xBF126D42
 
