--- a/Debutant/imgui.ini
+++ b/Debutant/imgui.ini
@@ -5,17 +5,23 @@ Collapsed=0
 
 [Window][Settings]
 Pos=0,19
-Size=375,972
+Size=292,701
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000002,0
 
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1920,991
+Size=1284,720
 Collapsed=0
 
+[Window][Scene view]
+Pos=294,19
+Size=990,701
+Collapsed=0
+DockId=0x00000003,0
+
 [Docking][Data]
-DockSpace   ID=0x3BC79352 Window=0x4647B76E Pos=0,48 Size=1920,972 Split=X
-  DockNode  ID=0x00000001 Parent=0x3BC79352 SizeRef=375,701 Selected=0x1C33C293
-  DockNode  ID=0x00000002 Parent=0x3BC79352 SizeRef=1543,701 CentralNode=1
+DockSpace   ID=0x3BC79352 Window=0x4647B76E Pos=144,140 Size=1284,701 Split=X
+  DockNode  ID=0x00000002 Parent=0x3BC79352 SizeRef=292,701 Selected=0x1C33C293
+  DockNode  ID=0x00000003 Parent=0x3BC79352 SizeRef=1626,701 CentralNode=1 Selected=0xD184B444
 
